Hebrew translations by Oron Peled
git-svn-id: file:///srv/svn/publican/trunk@732 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Fri Jun 05 2009 Oron Peled <oron@actcom.co.il>
+- Translate Document Conventions into Hebrew
+
 - Thu Jun 04 2009 Jurijs Kolomijecs <admin@irben.id.lv>
 - Translate Document Conventions into Latvian
 
