--- a/publican/content/common/he-IL/Conventions.po
+++ b/publican/content/common/he-IL/Conventions.po
@@ -1,23 +1,25 @@
 # SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Oron Peled <oron@actcom.co.il>, 2009
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-04-15 23:41+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
+"PO-Revision-Date: 2009-06-06 13:20+0300\n"
+"Last-Translator: Oron Peled <oron@actcom.co.il>\n"
+"Language-Team: Hebrew Team <fedora-he-list@redhat.com>\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Virtaal 0.3.1\n"
 
 #. Tag: title
 #: Conventions.xml:5
 #, no-c-format
 msgid "Document Conventions"
-msgstr ""
+msgstr "מוסכמות לתיעוד"
 
 #. Tag: para
 #: Conventions.xml:7
@@ -26,6 +28,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"מדריך זה משתמש במספר מוסכמות לצורך הדגשת חלק מהמילים והמשפטים ובכדי להסב את "
+"תשומת הלב לפרטי מידע מסוימים."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,12 +42,18 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"בגרסאות המסמך המודפסות או השמורות בפורמט PDF, המדריך משתמש בגופנים הנלקחים "
+"מתוך <ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation "
+"Fonts</ulink>. אם גופנים אלו מותקנים במערכת, אזי גם גרסת ה-HTML משתמשת בהם "
+"לתצוגה. במידה ואין הדבר כך, המסמך מוצג בגופנים שקולים אחרים. הערה: גופני "
+"Liberation Fonts כלולים כברירת מחדל במערכת Red Hat Enterprise Linux מגרסה 5 "
+"והלאה."
 
 #. Tag: title
 #: Conventions.xml:16
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr ""
+msgstr "מוסכמות טיפוגרפיות"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -53,12 +63,14 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"ארבע מוסכמות טיפוגרפיות משמשות למשיכת תשומת הלב למילים ומשפטים מסוימים. להלן "
+"המוסכמות ונסיבות השימוש בהן."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "ריווח קבוע ומודגש"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -67,6 +79,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
 msgstr ""
+"משמש להצגת קלט מהמערכת, לרבות פקודות מעטפת, שמות קבצים ומסלולים. כמו כן, "
+"משמש גם להדגיש מקשי מקלדת וצירופי מקשים. לדוגמה:"
 
 #. Tag: para
 #: Conventions.xml:31
@@ -77,6 +91,9 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
+"להצגת תוכן הקובץ <filename>my_next_bestselling_novel</filename> בתיקיה "
+"הנוכחית יש להקליד את הפקודה <command>cat my_next_bestselling_novel</command> "
+"בשורת הפקודה ולהקיש על מקש <keycap>Enter</keycap> לצורך הפעלתה."
 
 #. Tag: para
 #: Conventions.xml:36
@@ -85,6 +102,8 @@ msgid ""
 "The above includes a file name, a shell command and a key cap, all presented "
 "in Mono-spaced Bold and all distinguishable thanks to context."
 msgstr ""
+"המשפט לעיל מכיל שם קובץ, פקודת מעטפת ותיאור מקש, כולם מוצגים בגופן מודגש בעל "
+"ריווח קבוע וניתן להבחין ביניהם על פי ההקשר."
 
 #. Tag: para
 #: Conventions.xml:39
@@ -93,12 +112,14 @@ msgid ""
 "Key-combinations can be distinguished from key caps by the hyphen connecting "
 "each part of a key-combination. For example:"
 msgstr ""
+"ניתן להבדיל בין מקשים לצירופי מקשים בעזרת המקף המחבר בין החלקים השונים של "
+"הצירוף. לדוגמה:"
 
 #. Tag: para
 #: Conventions.xml:44
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr ""
+msgstr "יש להקיש <keycap>Enter</keycap> לביצוע הפקודה."
 
 #. Tag: para
 #: Conventions.xml:48
@@ -109,6 +130,10 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
+"יש להקיש <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keyc"
+"ap></keycombo> כדי לעבור למסוף הווירטואלי הראשון. נא להקיש <keycombo><keycap"
+">Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> לצורך חזרה "
+"לסביבת העבודה הגרפית."
 
 #. Tag: para
 #: Conventions.xml:53
@@ -117,6 +142,8 @@ msgid ""
 "The first sentence highlights the particular key cap to press. The second "
 "highlights two sets of three key caps, each set pressed simultaneously."
 msgstr ""
+"המשפט הראשון מציין מקש מסוים במקלדת. המשפט השני מציין שני צרופים של שונים של "
+"שלושה מקשים כל אחד המופעלים ביחד."
 
 #. Tag: para
 #: Conventions.xml:57
@@ -126,6 +153,9 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>Mono-spaced Bold</literal>. For example:"
 msgstr ""
+"כאשר מדובר על קוד מקור, נשתמש באותן מוסכמות לציון שמות משתנים, פונקציות, "
+"ערכים מוחזרים, שמות מחלקות ופונקציות החברות במחלקה. הן יסומנו בתוך הפסקה "
+"בגופן מודגש בריווח קבוע. לדוגמה:"
 
 #. Tag: para
 #: Conventions.xml:62
@@ -136,12 +166,15 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
+"מחלקות קשורות לקבצים כוללות <classname>filesystem</classname> עבור מערכות "
+"קבצים, <classname>file</classname> עבור קבצים וכן <classname>dir</classname> "
+"עבור תיקיות. לכל מחלקה משויך אוסף הרשאות משלה."
 
 #. Tag: application
 #: Conventions.xml:68
 #, no-c-format
 msgid "Proportional Bold"
-msgstr ""
+msgstr "גודל מותאם יחסית ומודגש"
 
 #. Tag: para
 #: Conventions.xml:71
@@ -151,6 +184,8 @@ msgid ""
 "names; dialogue box text; labelled buttons; check-box and radio button "
 "labels; menu titles and sub-menu titles. For example:"
 msgstr ""
+"גופן זה מציין מילים ומשפטים המופיעים במערכת, כגון שמות ישומים; מלל בתיבות "
+"שיחה; תגיות של כפתורים מסוגים שונים; כותרות תפריטים ותתי תפריטים. למשל:"
 
 #. Tag: para
 #: Conventions.xml:76
@@ -163,6 +198,11 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
+"יש לבחור <guimenu>מערכת > העדפות > עכבר</guimenu> מסרגל התפריטים הראשי כדי "
+"להפעיל את <application>העדפות עכבר</application>. בכרטיסיית "
+"<guilabel>כפתורים</guilabel> יש לבחור את <guilabel>עכבר לשמאליים</guilabel> "
+"וללחוץ על כפתור <guibutton>סגור</guibutton> לצורך החלפת הכפתור הראשי של "
+"העכבר משמאל לימין (כך שיתאים לשימוש ביד שמאל)."
 
 #. Tag: para
 #: Conventions.xml:80
@@ -180,6 +220,15 @@ msgid ""
 "document and choose <guimenu>Edit > Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
+"להכנסת תווים מיוחדים לקובץ <application>gedit</application>, יש לבחור מסרגל "
+"התפריטים הראשי <guimenu>ישומים > עזרים > מפת תווים</guimenu>. מתפריט היישום "
+"<application>מפת תווים</application> צריך לבחור <guimenu>חיפוש > מצא "
+"‎&hellip;‏</guimenu> יש להקליד את שם התו בשדה <guilabel>חיפוש</guilabel> "
+"וללחוץ על כפתור <guibutton>הבא</guibutton>. התו שחיפשתם יודגש "
+"ב<guilabel>טבלת התווים</guilabel>. נא ללחוץ לחיצה כפולה על התו המודגש, כדי "
+"להעתיק אותו לשדה <guilabel>מלל להעתקה</guilabel> ואז על כפתור "
+"<guibutton>העתק</guibutton>. עתה יש לחזור למסמך שלכם ולבחור מהתפריט של "
+"<application>gedit</application> את פעולות <guimenu>עריכה > הדבק</guimenu>."
 
 #. Tag: para
 #: Conventions.xml:85
@@ -190,6 +239,9 @@ msgid ""
 "interface, all presented in Proportional Bold and all distinguishable by "
 "context."
 msgstr ""
+"כל שמות היישומים; שמות תפריטי המערכת; הפריטים מתוכם; שמות התפריטים של היישום "
+"וכמו כן שמות כפתורים ומלל המופיעים במנשק המשתמש, כולם מוצגים בגופן מותאם "
+"יחסית ומודגש וניתן להבחין ביניהם על פי ההקשר."
 
 #. Tag: para
 #: Conventions.xml:89
@@ -200,6 +252,10 @@ msgid ""
 "<guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-"
 "menu in the <guimenu>System</guimenu> menu of the main menu bar' approach."
 msgstr ""
+"שימו לב לקיצור <guimenu>></guimenu> המשמש לציון הניווט בתפריטים ותת-תפריטים. "
+"הדבר נעשה כדי להימנע מהצורך בתיאורים שקשה לעקוב אחריהם כמו 'נא לבחור  "
+"<guimenuitem>עכבר</guimenuitem> מתת-התפריט <guimenu>העדפות</guimenu> מתוך "
+"תפריט <guimenu>מערכת</guimenu> בסרגל התפריטים'."
 
 #. Tag: para
 #: Conventions.xml:93
@@ -209,6 +265,8 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
+"<command><replaceable>ריווח שווה מודגש ומוטה</replaceable></command> או "
+"<application><replaceable>ריווח יחסי מודגש ומוטה</replaceable></application>"
 
 #. Tag: para
 #: Conventions.xml:97
@@ -219,6 +277,10 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
+"הן במקרה של גופן בריווח שווה מודגש והן במקרה של גופן בריווח יחסי מודגש, "
+"התוספת של ההטיה מציינת שמדובר בטקסט בר החלפה או משתנה. ההטיה מבליטה שאין "
+"המדובר בטקסט שיש להקלידו ככתבו או טקסט המוצג כפי שהוא אלא שהטקסט משתנה לפי "
+"הנסיבות. למשל:"
 
 #. Tag: para
 #: Conventions.xml:102
@@ -230,6 +292,10 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
+"בכדי להתחבר למחשב מרוחק בעזרת ssh יש להקליד בשורת הפקודה <command>ssh <repla"
+"ceable>username</replaceable>@<replaceable>domain.name</replaceable></comman"
+"d>. אם שם המחשב המרוחק הוא <filename>example.com</filename> ושם המשתמש על "
+"המחשב הזה הוא john אז צריך להקליד <command>ssh john@example.com</command>."
 
 #. Tag: para
 #: Conventions.xml:106
@@ -240,6 +306,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
+"הפקודה <command>mount -o remount <replaceable>file-"
+"system</replaceable></command> מעגנת מחדש את מערכת הקבצים שצוינה. לדוגמה, "
+"כדי לעגן מחדש את מערכת הקבצים <filename>/home</filename>, הפקודה הנדרשת היא "
+"<command>mount -o remount /home</command>."
 
 #. Tag: para
 #: Conventions.xml:110
@@ -250,6 +320,9 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
+"כדי לראות את הגרסה של חבילת תכנה מותקנת, יש להריץ את הפקודה <command>rpm -q "
+"<replaceable>package</replaceable></command>. יתקבל פלט במבנה: "
+"<command><replaceable>package-version-release</replaceable></command>."
 
 #. Tag: para
 #: Conventions.xml:115
@@ -259,6 +332,9 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"שימו לב למילים המודגשות והמוטות לעיל &mdash; username, domain.name, file-"
+"system, package, version ו-release. כל מילה כזו מציינת מקום של טקסט שיוקלד "
+"או שיוצג על ידי המערכת."
 
 #. Tag: para
 #: Conventions.xml:119
@@ -267,6 +343,8 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
+"מלבד השימוש המקובל לכותרת של עבודה, אותיות מוטות מסמנות גם את השימוש הראשון "
+"במושג חדש חשוב. לדוגמה:"
 
 #. Tag: para
 #: Conventions.xml:124
@@ -280,12 +358,18 @@ msgid ""
 "firstterm> (<firstterm>MPMs</firstterm>). Unlike other modules, only one "
 "module from the MPM group can be loaded by the Apache HTTP Server."
 msgstr ""
+"כאשר שרת HTTP אפאצ'י מקבל בקשות, הוא יוצר נימים או תהליכי בן כדי לטפל בהן. "
+"קבוצה זו של נימים או תהליכי בן ידועה בשם <firstterm>server-pool</firstterm>. "
+"בגרסה 2.0 של שרת אפאצ'י האחריות ליצירה וניהול של server-pools אלו הוסתרה "
+"בקבוצת מודולים הנקראת <firstterm>Multi-Processing Modules</firstterm> או "
+"בקיצור <firstterm>MPMs</firstterm>. בניגוד למודולים אחרים, ניתן לטעון רק רק "
+"מודול אחד מקבוצת MPM לשרת אפאצ'י."
 
 #. Tag: title
 #: Conventions.xml:132
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr ""
+msgstr "מוסכמות לגבי ציטטות"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -293,7 +377,7 @@ msgstr ""
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "שני מבנים מקובלים, לרוב מרובי שורות, מוצגים בצורה שונה מהטקסט הרגיל."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -302,6 +386,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"פלט הנשלח למסוף מוצג בגופן <computeroutput>רומי בריווח אחיד</computeroutput> "
+"כמודגם להלן:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -318,6 +404,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"תדפיס קוד מקור נכתבים <computeroutput>בכתב רומי בריווח אחיד</computeroutput> "
+"אך מודגשים ומוצגים כדלהלן:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -349,7 +437,7 @@ msgstr ""
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "הערות ואזהרות"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -358,12 +446,13 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"לבסוף, אנו משתמשים בשלושה סימנים חזותיים לצורך הסבת תשומת הלב למידע חשוב."
 
 #. Tag: title
 #: Conventions.xml:160
 #, no-c-format
 msgid "Note"
-msgstr ""
+msgstr "הערה"
 
 #. Tag: para
 #: Conventions.xml:161
@@ -373,12 +462,14 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"הערות מספקות \"טיפים\" לקיצורי דרך או גישות חלופיות לביצוע המשימה. התעלמות מהן "
+"לא תגרום לנזק אך יתכן שתפסידו הזדמנות ללמוד רעיונות שיקלו עליכם."
 
 #. Tag: title
 #: Conventions.xml:167
 #, no-c-format
 msgid "Important"
-msgstr ""
+msgstr "שימו לב"
 
 #. Tag: para
 #: Conventions.xml:168
@@ -389,12 +480,15 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
+"תיבות \"שימו לב\" מציינות נושאים שקל להחמיץ: שינויי תצורה שלא ישמרו לפעם הבאה "
+"או שירותים הדורשים הפעלה מחדש לפני החלת העדכון. התעלמות מתיבות \"שימו לב\" לא "
+"תגרום לאבדן מידע אך עלולה להביא למצבים מטרידים ומתסכלים."
 
 #. Tag: title
 #: Conventions.xml:175
 #, no-c-format
 msgid "Warning"
-msgstr ""
+msgstr "אזהרה"
 
 #. Tag: para
 #: Conventions.xml:176
@@ -402,4 +496,4 @@ msgstr ""
 msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "אין להתעלם מאזהרות. התעלמות עלולה לגרום לאבדן מידע."
