--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Fri Jun 05 2009 Oron Peled <oron@actcom.co.il>
+- Translate Fedora Feedback into Hebrew
+
 - Thu Jun 04 2009 Jurijs Kolomijecs <admin@irben.id.lv>
 - Translate Fedora Feedback into Latvian
 
