--- a/publican-fedora/he-IL/Feedback.po
+++ b/publican-fedora/he-IL/Feedback.po
@@ -1,40 +1,72 @@
+# SOME DESCRIPTIVE TITLE.
+# Oron Peled <oron@actcom.co.il>, 2009
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-11-05 08:09+1000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2009-04-15 23:41+0000\n"
+"PO-Revision-Date: 2009-06-05 12:33+0300\n"
+"Last-Translator: Oron Peled <oron@actcom.co.il>\n"
+"Language-Team: Hebrew Team <fedora-he-list@redhat.com>\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Virtaal 0.3.1\n"
 
-#: ./Feedback.xml:6(title) 
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "אנו זקוקים למשוב!"
 
-#: ./Feedback.xml:8(primary) 
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
-msgstr ""
+msgstr "משוב"
 
-#: ./Feedback.xml:9(secondary) 
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
-msgstr ""
+msgstr "קשר לכותבי המדריך"
 
-#: ./Feedback.xml:11(para) 
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
+msgid ""
+"If you find a typographical error in this manual, or if you have thought of "
+"a way to make this manual better, we would love to hear from you! Please "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"<application>&PRODUCT;.</application>"
 msgstr ""
+"אם נמצאו שגיאות במדריך זה, או אם יש לכם רעיונות לשיפור, נשמח לשמוע עליהם! "
+"אנא שילחו למערכת דיווח שגיאות בכתובת: <ulink url=\"http://bugzilla.redhat.com"
+"/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>. נא לקטלג את הדיווח "
+"תחת המוצר <application>&PRODUCT;.</application>"
 
-#: ./Feedback.xml:16(para) 
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
+msgid ""
+"When submitting a bug report, be sure to mention the manual's identifier: "
+"<citetitle>&BOOKID;</citetitle>"
 msgstr ""
+"כאשר שולחים דיווח שגיאות, יש לוודא שמציינים את מזהה המדריך: "
+"<citetitle>&BOOKID;</citetitle>"
 
-#: ./Feedback.xml:20(para) 
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"If you have a suggestion for improving the documentation, try to be as "
+"specific as possible when describing it. If you have found an error, please "
+"include the section number and some of the surrounding text so we can find "
+"it easily."
 msgstr ""
-
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: ./Feedback.xml:0(None) 
-msgid "translator-credits"
-msgstr ""
-
+"כאשר מציעים שיפור לתיעוד, יש לנסות לתאר אותו באופן פרטני ככל האפשר. אם "
+"מדווחים על שגיאה בתיעוד, נא לכלול את מספר הסעיף ואת המלל המקיף את האזור "
+"הדורש תיקון בכדי להקל על איתורו."
