Norwegian translations by Sindre Wetjen
git-svn-id: file:///srv/svn/publican/trunk@733 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Sun Jun 15 2009 Sindre Wetjen <sindre.w@gmail.com>
+- Translate Fedora Feedback into Norwegian (Bokmål)
+
 - Fri Jun 05 2009 Oron Peled <oron@actcom.co.il>
 - Translate Fedora Feedback into Hebrew
 
