--- a/publican-fedora/nb-NO/Feedback.po
+++ b/publican-fedora/nb-NO/Feedback.po
@@ -1,40 +1,72 @@
+# Feedback.po translated to Norwegian (bokmål)
+# Sindre Wetjen <sindre.w@gmail.com>, 2009.
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-11-05 08:09+1000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: Feedback\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2009-04-15 23:41+0000\n"
+"PO-Revision-Date: 2009-06-14 23:00+0200\n"
+"Last-Translator: Sindre Wetjen <sindre.w@gmail.com>\n"
+"Language-Team: Norwegian <i18n-no@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Type: text/plain; charset=UtF-8\n"
+"Content-Transfer-Encoding: utf-8\n"
 
-#: ./Feedback.xml:6(title) 
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "Vi Trenger Tilbakemeldinger!"
 
-#: ./Feedback.xml:8(primary) 
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
-msgstr ""
+msgstr "tilbakemeldinger"
 
-#: ./Feedback.xml:9(secondary) 
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
-msgstr ""
+msgstr "Kontakt informasjon for denne manualen"
 
-#: ./Feedback.xml:11(para) 
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
+msgid ""
+"If you find a typographical error in this manual, or if you have thought of "
+"a way to make this manual better, we would love to hear from you! Please "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"<application>&PRODUCT;.</application>"
 msgstr ""
+"Hvis du finner typografiske feil i denne manualen, eller hvis du har noen "
+"ideer om hvordan vi kan gjøre denne manualen bedre, så vil vi svært gjerne "
+"høre fra deg! Vær så snill å legg inn en rapport i Bugzilla: <ulink url="
+"\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/"
+"</ulink> i mot produktet <application>&PRODUCT;.</application>"
 
-#: ./Feedback.xml:16(para) 
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
+msgid ""
+"When submitting a bug report, be sure to mention the manual's identifier: "
+"<citetitle>&BOOKID;</citetitle>"
 msgstr ""
+"Når du legger inn en feilrapport, husk å nevn manualens identifikasjon: "
+"<citetitle>&BOOKID;</citetitle>"
 
-#: ./Feedback.xml:20(para) 
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"If you have a suggestion for improving the documentation, try to be as "
+"specific as possible when describing it. If you have found an error, please "
+"include the section number and some of the surrounding text so we can find "
+"it easily."
 msgstr ""
-
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: ./Feedback.xml:0(None) 
-msgid "translator-credits"
-msgstr ""
-
+"Hvis du har et forslag for hvordan vi kan gjøre dokumentasjonen bedre, prøv "
+"å vær så spesifikk som mulig når du beskriver forslaget. Hvis du har funnet "
+"en feil, vær så snill å inkludere seksjonsnummeret og litt av den omliggende "
+"teksten sånn at vi lettere kan finne det."
