--- a/publican/content/common/nb-NO/Conventions.po
+++ b/publican/content/common/nb-NO/Conventions.po
@@ -1,23 +1,23 @@
-# SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Conventions.po translated to Norwegian (bokmål).
+# Sindre Wetjen <sindre.w@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-04-15 23:41+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
+"PO-Revision-Date: 2009-06-14 22:57+0200\n"
+"Last-Translator: Sindre Wetjen <sindre.w@gmail.com>\n"
+"Language-Team: Norwegian <i18n-no@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: application/x-xml2pot; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Type: text/plain; charset=UtF-8\n"
+"Content-Transfer-Encoding: utf-8\n"
 
 #. Tag: title
 #: Conventions.xml:5
 #, no-c-format
 msgid "Document Conventions"
-msgstr ""
+msgstr "Dokumentkonvensjoner"
 
 #. Tag: para
 #: Conventions.xml:7
@@ -26,6 +26,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"Denne manualen bruker flere konvensjoner for å markere visse ord og fraser "
+"og for å dra oppmerksomheten til spesielle biter av informasjonen."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,12 +40,18 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"I PDF og papir versjoner, bruker denne manualen skriftbilder tatt i fra "
+"<ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</"
+"ulink> settet. Liberation Fonts settet er også brukt i HTML versjonene, hvis "
+"settet er installert på ditt system. Hvis de ikke er det, så vil et "
+"alternativt men likt skriftbilde vises. NB: Red Hat Enterprise Linux 5 og "
+"nyere inkluderer Liberation Fonts settet som standard."
 
 #. Tag: title
 #: Conventions.xml:16
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr ""
+msgstr "Typografiske konvensjoner"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -53,12 +61,15 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"Fire typografiske konvensjoner er brukt for å dra oppmerksomheten til "
+"spesielle ord og fraser. Disse konvensjonene, og omstendighetene de skal "
+"brukes i, er som følger."
 
 #. Tag: literal
 #: Conventions.xml:23
 #, no-c-format
 msgid "Mono-spaced Bold"
-msgstr ""
+msgstr "Fastbredde Fet"
 
 #. Tag: para
 #: Conventions.xml:26
@@ -67,6 +78,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
 msgstr ""
+"Brukt til å markere inndata til systemet, inkludert terminal kommandoer, "
+"filnavn og -stier. Det er også brukt for å markere enkelt taster og "
+"tastekombinasjoner. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:31
@@ -77,6 +91,10 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
+"For å se innholdet i filen <filename>Min_neste_bestselgende_roman</filename> "
+"i ditt nåværende arbeidsområde, skriv <command>cat "
+"min_neste_bestselgende_roman</command> kommandoen i terminalen og trykk "
+"<keycap>Enter</keycap> for å kjøre kommandoen."
 
 #. Tag: para
 #: Conventions.xml:36
@@ -85,6 +103,8 @@ msgid ""
 "The above includes a file name, a shell command and a key cap, all presented "
 "in Mono-spaced Bold and all distinguishable thanks to context."
 msgstr ""
+"Avsnitt over inkluderer et filnavn, en terminalkommando og en tast, alle er "
+"presentert i Fastbredde Fet og er tydelige i sammehengen."
 
 #. Tag: para
 #: Conventions.xml:39
@@ -93,12 +113,14 @@ msgid ""
 "Key-combinations can be distinguished from key caps by the hyphen connecting "
 "each part of a key-combination. For example:"
 msgstr ""
+"Tastekombinasjoner kan også bli uthevet fra enkelttaster med bindestreken "
+"som binder alle deler av tastekombinasjonen. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:44
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr ""
+msgstr "Trykk <keycap>Enter</keycap> for å kjøre kommandoen."
 
 #. Tag: para
 #: Conventions.xml:48
@@ -109,6 +131,10 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
+"Trykk <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"keycap></keycombo> for å bytte til den første virtuelle terminalen. Trykk "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"keycombo> for å returnere til X-Windows sesjonen din."
 
 #. Tag: para
 #: Conventions.xml:53
@@ -117,6 +143,9 @@ msgid ""
 "The first sentence highlights the particular key cap to press. The second "
 "highlights two sets of three key caps, each set pressed simultaneously."
 msgstr ""
+"Den første setningen markerer de forskjellige tastene man skal trykke. Den "
+"andre markerer to sett av tre taster, der hvert sett av knapper skal trykkes "
+"på samtidig."
 
 #. Tag: para
 #: Conventions.xml:57
@@ -126,6 +155,9 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>Mono-spaced Bold</literal>. For example:"
 msgstr ""
+"Hvis kildekode er diskutert, klassenavn, metoder, funksjoner, variabelnavn "
+"og returnerte verdier nevnt i et avsnitt vil bli presentert lik den ovenfor, "
+"i <literal>Fastbredde Fet</literal>. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:62
@@ -136,12 +168,16 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
+"Filrelaterte klasser inkluderer <classname>filsystem</classname> for "
+"filsystemer, <classname>fil</classname> for filer, og <classname>dir</"
+"classname> for mapper. Hver klasse har sitt eget sett med tillatelser "
+"assosiert med seg."
 
 #. Tag: application
 #: Conventions.xml:68
 #, no-c-format
 msgid "Proportional Bold"
-msgstr ""
+msgstr "Proporsjonal Fet"
 
 #. Tag: para
 #: Conventions.xml:71
@@ -151,6 +187,9 @@ msgid ""
 "names; dialogue box text; labelled buttons; check-box and radio button "
 "labels; menu titles and sub-menu titles. For example:"
 msgstr ""
+"Dette betegner ord og fraser som kan møtes i et system, inkludert "
+"programnavn; dialogbokstekst; knapper med etiketter; sjekkbokser og "
+"radioknapper; menytitler og undermenytitler. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:76
@@ -163,6 +202,12 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
+"Velg <guimenu>System > Brukervalg > Mus</guimenu> ifra hovedmenylinja for å "
+"starte <application>Brukervalg for Mus</application>. I fanen "
+"<guilabel>Generelt</guilabel>, trykk på <guilabel>Venstrehendt</guilabel> "
+"sjekkboksen og trykk <guibutton>Lukk</guibutton> for å skifte den primære "
+"museknappen fra høyre til venstre (som gjør musa bedre egnet for "
+"venstrehendte)."
 
 #. Tag: para
 #: Conventions.xml:80
@@ -180,6 +225,16 @@ msgid ""
 "document and choose <guimenu>Edit > Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
+"For å sette spesialtegn inn i ei <application>gedit</application> fil, velg "
+"<guimenu>Programmer > Tilbehør > Tegnkart</guimenu> ifra hovedmenylinja. Så "
+"velger du <guimenu>Søk > Finn</guimenu> fra <application>Tegnkart</"
+"application> menylinja, skriv navnet på tegnet i <guilabel>Søk:</guilabel> "
+"feltet og trykk <guilabel>Neste</guilabel>. Tegnet du søkte etter vil bli "
+"fremhevet i <guilabel>Tegntabellen</guilabel>.Dobbeltklikk på det fremhevete "
+"tegnet for å plassere det i <guilabel>Tekst som skal kopieres</guilabel> "
+"feltet og trykk på <guilabel>Kopier</guilabel> knappen. Nå går du tilbake "
+"til dokumentet ditt og velger <guimenu>Rediger > Lim inn</guimenu> fra "
+"menylinja til <application>gedit</application>"
 
 #. Tag: para
 #: Conventions.xml:85
@@ -190,6 +245,10 @@ msgid ""
 "interface, all presented in Proportional Bold and all distinguishable by "
 "context."
 msgstr ""
+"Teksten ovenfor inkluderer programnavn; meny- og punktnavn som går igjennom "
+"hele systemet; programspesifikke menynavn; og knapper og tekster som man "
+"finner i et grafisk brukergrensesnitt (GUI), alt er presentert i "
+"proporsjonal fet og skilt ut i konteksten."
 
 #. Tag: para
 #: Conventions.xml:89
@@ -200,6 +259,11 @@ msgid ""
 "<guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-"
 "menu in the <guimenu>System</guimenu> menu of the main menu bar' approach."
 msgstr ""
+"Legg merke til at <guimenu>></guimenu> brukes til å indikere navigasjon "
+"igjennom en meny og dens undermenyer. Dette er for å unngå vanskelig-å-følge "
+"'Velg <guimenuitem>Mus</guimenuitem> fra <guimenu>Brukervalg</guimenu> "
+"undermenyen i <guimenu>System</guimenu> menyen i fra hovedmenylinja' "
+"tilnærmingen."
 
 #. Tag: para
 #: Conventions.xml:93
@@ -209,6 +273,8 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
+"<command><replaceable>Fastbredde Fet Kursiv</replaceable></command> eller "
+"<application><replaceable>Proporsjonal Fet Kursiv</replaceable></application>"
 
 #. Tag: para
 #: Conventions.xml:97
@@ -219,6 +285,10 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
+"Uansett om det er Fastbredde Fet Kursiv eller Proporsjonal Fet, Kursiv "
+"indikerer at det er utskiftbar eller variabel tekst. Kursiv viser tekst som "
+"du ikke skriver inn direkte eller viser tekst som forandrer seg etter "
+"omstendighetene. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:102
@@ -230,6 +300,11 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
+"For å koble til en fjernmaskin ved hjelp av ssh, skriv "
+"<command>ssh<replaceable>brukernavn</replaceable>@<replaceable>domenenavn</"
+"replaceable></command> i terminalvinduet. Hvis fjernmaskinen er "
+"<filename>eksempel.com</filename> og ditt brukernavn på den maskinen er ola, "
+"skriv <command>ssh ola@eksempel.com</command>"
 
 #. Tag: para
 #: Conventions.xml:106
@@ -240,6 +315,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
+"<command>mount -o remount <replaceable>filsystem</replaceable></command> "
+"kommandoen igjenmonterer det navngitte filsystemet. For eksempel for å "
+"igjenmontere <filename>/home</filename> filsystemet, er kommandoen "
+"<command>mount -o remount /home</command>."
 
 #. Tag: para
 #: Conventions.xml:110
@@ -250,6 +329,10 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
+"For å se hvilken versjon en installert pakke er i, bruk <command>rpm -q "
+"<replaceable>pakke</replaceable></command> kommandoen. Den vil returnere et "
+"resultat likt dette: <command><replaceable>package-version-release</"
+"replaceable></command>."
 
 #. Tag: para
 #: Conventions.xml:115
@@ -259,6 +342,10 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"Legg merke til at ordene ovenfor i fet kursiv &mdash; brukernavn, domenenavn "
+"filsystem, pakke, versjon og utgivelse. Hvert ord isteden for noe annet, "
+"enten for tekst du skal skrive inn når du du skal kjøre kommandoen eller for "
+"tekst som skal vises av systemet."
 
 #. Tag: para
 #: Conventions.xml:119
@@ -267,6 +354,8 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
+"Bortsett fra standard bruken for å presentere tittelen til et arbeid, "
+"markerer kursiv den første bruken i en viktig term. For eksempel:"
 
 #. Tag: para
 #: Conventions.xml:124
@@ -280,12 +369,19 @@ msgid ""
 "firstterm> (<firstterm>MPMs</firstterm>). Unlike other modules, only one "
 "module from the MPM group can be loaded by the Apache HTTP Server."
 msgstr ""
+"Når Apache HTTP Serveren aksepterer en anmodning, starter den underprosesser "
+"eller tråder for å håndtere dem. Denne gruppen av underprosesser eller "
+"tråder er kjent som <firstterm>server-pool</firstterm>. Med Apache HTTP "
+"Server 2.0 har ansvaret for å lage og opprettholde disse server-poolene "
+"blitt sammenfattet til en gruppe av moduler kalt <firstterm>Multi-Processing "
+"Modules</firstterm>. (<firstterm>MPMs</firstterm>). Ulikt de andre modulene, "
+"er det bare en i MPM gruppen som kan bli lastet av Apache HTTP Serveren."
 
 #. Tag: title
 #: Conventions.xml:132
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr ""
+msgstr "Blikkfangersitatkonvensjoner"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -294,6 +390,8 @@ msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
 msgstr ""
+"To, vanligvis på flere linjer, datatyper er satt ut visuelt i fra den "
+"omliggende teksten."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -302,6 +400,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"Utdata sendt til en terminal er vist i <computeroutput>Fastbredde Roman</"
+"computeroutput> og presentert slik:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -310,6 +410,10 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"bøker        Skrivebord   Dokumentasjon  utkast  manuskript     foto    "
+"ting  svn\n"
+"bøker_testes  Skrivebord1  nedlastinger       bilder  notater  skrifter  "
+"svger"
 
 #. Tag: para
 #: Conventions.xml:144
@@ -318,6 +422,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
+"Oppført kildekode er også vist i <computeroutput>Fastbredde Fet</"
+"computeroutput> men er presentert og markert som følgende:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -344,12 +450,32 @@ msgid ""
 "   \n"
 "}"
 msgstr ""
+"package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
+"{\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
+"\n"
+"      System.out.println(\"Echo ble skapt\");\n"
+"\n"
+"      System.out.println(\"Echo.echo('Hallo') = \" + echo.echo(\"Hallo\"));\n"
+"   }\n"
+"   \n"
+"}"
 
 #. Tag: title
 #: Conventions.xml:153
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "Notater og advarsler"
 
 #. Tag: para
 #: Conventions.xml:155
@@ -358,12 +484,14 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"Til slutt, vi bruker tre visuelle metoder for å dra oppmerksomheten til "
+"informasjon som kanskje hadde blitt oversett ellers."
 
 #. Tag: title
 #: Conventions.xml:160
 #, no-c-format
 msgid "Note"
-msgstr ""
+msgstr "Notat"
 
 #. Tag: para
 #: Conventions.xml:161
@@ -373,12 +501,16 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"En notat er et tips eller en snarvei eller en alternativ innfallsvinkel til "
+"en forestående oppgave. Å ignorere en notat skal ikke ha noen negative "
+"konsekvenser, men du går kanskje glipp av et triks som ville gjort livet "
+"ditt enklere."
 
 #. Tag: title
 #: Conventions.xml:167
 #, no-c-format
 msgid "Important"
-msgstr ""
+msgstr "Viktig"
 
 #. Tag: para
 #: Conventions.xml:168
@@ -389,12 +521,17 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
+"Bokser markert som viktig beskriver i detalj ting som er lett å overse: "
+"Forandringer i konfigureringen som kun gjelder i den nåværende sesjonen, "
+"eller tjenester som trenger en omstart før oppdateringen vil tre i kraft. Å "
+"ignorere bokser markert som viktig vil ikke føre til tap av data, men kan "
+"skape irritasjon og frustrasjon."
 
 #. Tag: title
 #: Conventions.xml:175
 #, no-c-format
 msgid "Warning"
-msgstr ""
+msgstr "Advarsel"
 
 #. Tag: para
 #: Conventions.xml:176
@@ -403,3 +540,5 @@ msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
+"En advarsel burde ikke ble ignorert. Å ignorere advarsler vil mest "
+"sannsynlig føre til tap av data."
