Complete Arabic translation of Conventions by Muayyad Alsadi; make legal notice paras ltr since these are not to be translated
git-svn-id: file:///srv/svn/publican/trunk@735 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Sun Jun 21 2009 Muayyad Alsadi <alsadi@ojuba.org>
+- Complete translation of Document Conventions into Arabic
+
 - Sun Jun 15 2009 Sindre Wetjen <sindre.w@gmail.com>
 - Translate Document Conventions into Norwegian (Bokmål)
 
