--- a/publican/content/common/ar-AR/Conventions.po
+++ b/publican/content/common/ar-AR/Conventions.po
@@ -88,6 +88,13 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
+"لمشاهدة محتويات الملف "
+"<filename>my_next_bestselling_novel</filename> "
+"الموجود في الدليل (المجلد) الحالي اكتب الأمر"
+"‪ <command>cat my_next_bestselling_novel</command> ‬"
+"في المحث واضغط "
+"<keycap>Enter</keycap>"
+"لتنفيذ الأمر."
 
 #. Tag: para
 #: Conventions.xml:36
@@ -96,6 +103,8 @@ msgid ""
 "The above includes a file name, a shell command and a key cap, all presented "
 "in Mono-spaced Bold and all distinguishable thanks to context."
 msgstr ""
+"ما ذكر أعلاه يشتمل على اسم الملف file name مسبوقا بأمر shell command متبوعا بضغط مفتاح key cap"
+"تظهر كلها بخط ثخين ثابت العرض mono-spaced ونستطيع التمييز بينها بفضل السياق."
 
 #. Tag: para
 #: Conventions.xml:39
@@ -104,12 +113,14 @@ msgid ""
 "Key-combinations can be distinguished from key caps by the hyphen connecting "
 "each part of a key-combination. For example:"
 msgstr ""
+"يمكن تمييز تركيب المفاتيح Key-combinations من المفتاح المفردة عبر الشرطة التي تربط كل مفتاح من المجموعة المركبة. مثلا:"
+
 
 #. Tag: para
 #: Conventions.xml:44
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr ""
+msgstr "اضغط <keycap>ENTER</keycap> لتنفيذ الأمر."
 
 #. Tag: para
 #: Conventions.xml:48
@@ -120,6 +131,11 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
+"اضغط "
+" ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo>‬ "
+"للتبديل إلى الطرفية الافتراضية الاولى. اضغط"
+" ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo>‬ "
+"للعودة إلى جلسة نظام نوافذ إكس."
 
 #. Tag: para
 #: Conventions.xml:53
@@ -127,7 +143,7 @@ msgstr ""
 msgid ""
 "The first sentence highlights the particular key cap to press. The second "
 "highlights two sets of three key caps, each set pressed simultaneously."
-msgstr ""
+msgstr "الجملة الأولى تحدد المفتاح الذي تضغطه. الثانية توضح مجموعتين من تركيب المفاتيح كل تركيب تضغط مفاتيحه معا."
 
 #. Tag: para
 #: Conventions.xml:57
@@ -136,7 +152,7 @@ msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>Mono-spaced Bold</literal>. For example:"
-msgstr ""
+msgstr "إن كنا نتحدث عن كود مصدري فإن أسماء الصنوف والطرق والدوال والمتغيرات والقيم المعادة داخل الفقرة ستظهر كما ظهرت أعلاه <literal> بحظ ثابت العرض ثخين Mono-spaced Bold</literal>. مثلا:"
 
 #. Tag: para
 #: Conventions.xml:62
@@ -147,12 +163,15 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
+"الصنوف المتعلقة بالملفات تتضمن <classname>filesystem</classname> لنظام الملفات، "
+"<classname>file</classname> للملفات، و "
+"<classname>dir</classname> للأدلة (المجلدات)، وكل صنف له ما يرتبط به من الصلاحيات."
 
 #. Tag: application
 #: Conventions.xml:68
 #, no-c-format
 msgid "Proportional Bold"
-msgstr ""
+msgstr "ثخين متناسب"
 
 #. Tag: para
 #: Conventions.xml:71
@@ -161,7 +180,7 @@ msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialogue box text; labelled buttons; check-box and radio button "
 "labels; menu titles and sub-menu titles. For example:"
-msgstr ""
+msgstr "هذا يرمز لكلمات أو عبارات تواجهك في النظام بما في ذلك أسماء التطبيقات النص الموجود في صناديق الحوار أو عناوين الازرار أو القوائم مثلا"
 
 #. Tag: para
 #: Conventions.xml:76
@@ -174,6 +193,12 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
+"اختر <guimenu>نظام > تفصيلات > الفأرة</guimenu> من القائمة الرئيسية"
+"لتشغيل  <application>تفضيلات الفأرة</application>."
+"وفي تبويب <guilabel>أزرار الفأرة</guilabel>،"
+"ضع علامة على  <guilabel>فأرة أعسر</guilabel> "
+" ثم انقر <guibutton>إغلاق</guibutton> "
+"لتبديل زر الفأرة الأساسي من الأيسر إلى الأيمن (مما يجعل الفأرة مناسبة للإنسان الأعسر)."
 
 #. Tag: para
 #: Conventions.xml:80
@@ -191,6 +216,15 @@ msgid ""
 "document and choose <guimenu>Edit > Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
+"لإضافة محرف خاص إلى ملف على <application>gedit</application>، "
+"اختر <guimenu>تطبيقات > ملحقات > خارطة المحارف</guimenu> من شرط القائمة الرئيسية."
+"ثم، اختر <guimenu>بحث > بحث&hellip;</guimenu> "
+"من قائمة برنامج <application>خارطة المحارف</application> ثم اكتب اسم المحرف في حقل <guilabel>بحث</guilabel> "
+"ثم انقر <guibutton>التالي</guibutton>. "
+"المحرف الذي تبحث عنه سيتم تحديده في  <guilabel>جدول المحارف</guilabel>. "
+"انقر على المحرف المحدد نقرا مزدوجا لوضعه في حقل <guilabel>النص المطلوب نسخه</guilabel> "
+"و انقر على زر <guibutton>نسخ</guibutton>. الآن انتقل إلى الوثيقة "
+"واختر <guimenu>تحرير > لصق</guimenu> من قائمة برنامج <application>gedit</application>."
 
 #. Tag: para
 #: Conventions.xml:85
@@ -201,7 +235,7 @@ msgid ""
 "interface, all presented in Proportional Bold and all distinguishable by "
 "context."
 msgstr ""
-
+"النص أعلاه يتضمن أسماء تطبيقات قوائم النظام ومدخلاتها وقوائم خاصة بكل تطبيق وأزرار ونصوص أخرى في الواجهة الرسومية كلها ظهرت بخط ثغين متناسب ونميز بينها من السياق."
 #. Tag: para
 #: Conventions.xml:89
 #, no-c-format
@@ -211,6 +245,11 @@ msgid ""
 "<guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-"
 "menu in the <guimenu>System</guimenu> menu of the main menu bar' approach."
 msgstr ""
+"لاحظ أن العلامة  <guimenu>></guimenu> لبيان النتقال من قائمة إلى قائمة فرعية. "
+"لأنه من الصعب تتبع الإرشادات التي تكون على شاكلة "
+" 'اختر <guimenuitem>الفأرة</guimenuitem> من قائمة <guimenu>تفضيلات</guimenu> "
+"المتفرعة عن قائمة <guimenu>النظام</guimenu> الموجودة في شريط القوائم الرئيسية'."
+
 
 #. Tag: para
 #: Conventions.xml:93
@@ -220,6 +259,7 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
+"<command><replaceable>ثخين ثابت العرض مائل Mono-spaced Bold Italic</replaceable></command> أو <application><replaceable>ثخين متناسب مائل  Proportional Bold Italic</replaceable></application>"
 
 #. Tag: para
 #: Conventions.xml:97
@@ -229,7 +269,8 @@ msgid ""
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
-msgstr ""
+msgstr "سواء كان ثخين ثايت العرض أو ثخين متناسب، إن كان مائلا فإنه يعبر عن جزء يجب تبديله أو نص متغيّر. "
+"فالمائل لا تكتبه كما هو أو لا يعرض كما هو بل يعتمد على الظروف مثلا:"
 
 #. Tag: para
 #: Conventions.xml:102
@@ -241,6 +282,10 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
+"للاتصال بجهاز بعيد عبر ssh، اكتب "
+"<command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></command> "
+"في محث سطر الأوامر. فإن كان الجهاز البعيد "
+"هو <filename>example.com</filename> واسمك عليه هو john، اكتب <command>ssh john@example.com</command>."
 
 #. Tag: para
 #: Conventions.xml:106
@@ -251,6 +296,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
+"الأمر "
+"<command>mount -o remount <replaceable>file-system</replaceable></command> 
+يعمل على إعادة ضم نظام الملفات المسمى."
+" مثلا، لإعادة ضم نظام الملفات   ‪ <filename>/home</filename> ‬  الأمر هو <command>mount -o remount /home</command>."
 
 #. Tag: para
 #: Conventions.xml:110
@@ -261,6 +310,8 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
+"لمعرفة إصدار حزمة مثبتة استخدم الأمر <command>rpm -q <replaceable>package</replaceable></command>"
+"وهو يعطيك: <command><replaceable>package-version-release</replaceable></command>."
 
 #. Tag: para
 #: Conventions.xml:115
@@ -270,6 +321,9 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"لاحظ الكلمات الثخينة المائلة أعلاه مثل "
+" &mdash; username و domain.name و file-system و package و version و release. "
+"كل واحدة منها توضح لك المكان الذي تضع فيه تلك القيم أو الذي يظهر فيه."
 
 #. Tag: para
 #: Conventions.xml:119
@@ -278,6 +332,7 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
+"وبعيدا عن الاستخدام القياسي لتمثيل العناوين، المائل يستخدم لتعين أول ظهور لحد (أي مصطلح) جديد. مثلا:"
 
 #. Tag: para
 #: Conventions.xml:124
@@ -291,12 +346,18 @@ msgid ""
 "firstterm> (<firstterm>MPMs</firstterm>). Unlike other modules, only one "
 "module from the MPM group can be loaded by the Apache HTTP Server."
 msgstr ""
+"عندما يستقبل خادم HTTP أباتشي طلبا، فإنه يفرع عمليات child processes أو خيوط معالجة threads. "
+"هذه المجموعة من العمليات أو الخيوط تعبر باسم <firstterm>server-pool</firstterm>."
+" في الإصدار 2.0 من خادم HTTP أباتشي  "
+"فإن مهمة إنشاء هذه البرك pools تم تجريدها في مجموعة من الوحدات "
+"تسمى <firstterm>Multi-Processing Modules</firstterm> (أو <firstterm>MPMs</firstterm> للاختصار). "
+"وبعكس الوحدات الاخرى لا يمكن تحميل إلا واحدة واحدة من بين وحدات هذه المجموعة."
 
 #. Tag: title
 #: Conventions.xml:132
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr ""
+msgstr "أعراف الاقتباسات المقتطعة Pull-quote"
 
 #. Tag: para
 #: Conventions.xml:134
@@ -304,15 +365,15 @@ msgstr ""
 msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "إثنان من الأنواع الشائعة متعددة الأسطر تظهر بصريا مختلفة عن النص المحيط"
 
 #. Tag: para
 #: Conventions.xml:138
 #, no-c-format
 msgid ""
-"Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
-"computeroutput> and presented thus:"
+"Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</computeroutput> and presented thus:"
 msgstr ""
+"مخرجات مرسلة للطرفية تُصف <computeroutput>بالخط الرومي ثابت العرض c  </computeroutput>Mono-spaced Roman  لذا تظهر هكذا:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -329,7 +390,7 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
-
+"الكود المصدري يظهر يُصف أيضا <computeroutput>بالخط الرومي ثابت العرض Mono-spaced Roman</computeroutput> لكنه قد يعرب ويميز هكذا: "
 #. Tag: programlisting
 #: Conventions.xml:148
 #, no-c-format
