Document Conventions and Fedora Feedback in Catalan and Croatian
git-svn-id: file:///srv/svn/publican/trunk@759 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,9 @@
+- Sun Aug 9 2009 Josip Šumečki <shumi.1337@gmail.com>
+- Translate Fedora Feedback into Croatian
+
+- Sun Aug 9 2009 Robert Buj <robert.buj@gmail.com>
+- Translate Fedora Feedback into Catalan
+
 - Sun Jun 15 2009 Sindre Wetjen <sindre.w@gmail.com>
 - Translate Fedora Feedback into Norwegian (Bokmål)
 
