POD fix from Mikhail Gusarov <dottedmag@dottedmag.net>
git-svn-id: file:///srv/svn/publican/trunk@768 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+-Mon Aug 24 2009 Mikhail Gusarov <dottedmag@dottedmag.net>
+- POD fixes
+
 - Sun Aug 9 2009
 - Translation of Document Conventions to Croatian -- Josip Šumečki <shumi.1337@gmail.com>
 
