Add Finnish translations
git-svn-id: file:///srv/svn/publican/trunk@784 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Fri Sep 4 2009 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
+- Translate Fedora Feedback into Finnish
+
 - Sun Aug 9 2009 Josip Šumečki <shumi.1337@gmail.com>
 - Translate Fedora Feedback into Croatian
 
