--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,4 +1,7 @@
--Mon Aug 24 2009 Mikhail Gusarov <dottedmag@dottedmag.net>
+- Fri Sep 4 2009 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
+- Translation of Document Conventions to Finnish
+
+- Mon Aug 24 2009 Mikhail Gusarov <dottedmag@dottedmag.net>
 - POD fixes
 
 - Sun Aug 9 2009
