Document Conventions and Fedora Feedback in Ukrainian -- Maxim V. Dziumanenko <dziumanenko@gmail.com>
git-svn-id: file:///srv/svn/publican/trunk@799 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
+- Translate Fedora Feedback into Ukrainian
+
 - Fri Sep 4 2009 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
 - Translate Fedora Feedback into Finnish
 
