--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
+- Translation of Document Conventions to Ukrainian
+
 - Fri Sep 4 2009 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
 - Translation of Document Conventions to Finnish
 
