Updates to Ukrainian translations
git-svn-id: file:///srv/svn/publican/trunk@807 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/uk-UA/Feedback.po
+++ b/publican-fedora/uk-UA/Feedback.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-04-15 23:41+0000\n"
-"PO-Revision-Date: 2009-09-24 HO:MI+ZONE\n"
+"PO-Revision-Date: 2009-10-06 10:25+0300\n"
 "Last-Translator: Maxim Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 #: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "Нам потрібен зворотний зв'язок!"
+msgstr "Нам потрібні ваші відгуки!"
 
 #. Tag: primary
 #: Feedback.xml:8
@@ -43,8 +43,8 @@ msgid ""
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "Якщо ви знайдете типографську помилку у цій довідці, або якщо маєте пропозиції "
-"щодо її покращення, ми будемо раби вас почути! Надішліть звіт про "
-"помилку у Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"щодо її покращення, ми будемо раби вас почути! Надішліть повідомлення "
+"у Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> для продукту "
 "<application>&PRODUCT;.</application>"
 
@@ -55,7 +55,7 @@ msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"При надсиланні звіту про помилку, не забудьте вказати ідентифікатор документу довідки: "
+"При надсиланні повідомлення, не забудьте вказати ідентифікатор документу довідки: "
 "<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
