--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Tue Oct 6 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
+- Update of Document Conventions to Ukrainian
+
 - Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
 - Translation of Document Conventions to Ukrainian
 
