--- a/publican/datadir/Common_Content/common/uk-UA/Conventions.po
+++ b/publican/datadir/Common_Content/common/uk-UA/Conventions.po
@@ -7,10 +7,10 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-04-15 23:41+0000\n"
-"PO-Revision-Date: 2009-09-24 HO:MI+ZONE\n"
+"PO-Revision-Date: 2009-10-06 10:25+0300\n"
 "Last-Translator: Maxim Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
-"Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
+"Language-Team: Ukrainian <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,7 +19,7 @@ msgstr ""
 #: Conventions.xml:5
 #, no-c-format
 msgid "Document Conventions"
-msgstr "домовленості, що використовуються у документі"
+msgstr "Домовленості, що використовуються у документі"
 
 #. Tag: para
 #: Conventions.xml:7
@@ -29,7 +29,7 @@ msgid ""
 "and draw attention to specific pieces of information."
 msgstr ""
 "У цьому документі прийняті домовленості для виділення певних слів чи фраз та "
-"привертання уваги до певних частин інформації."
+"привертання уваги до частин інформації."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -44,13 +44,13 @@ msgid ""
 msgstr ""
 "У паперовій та PDF версіях цього документу використовуються шрифти гарнітури <ulink "
 "url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink>. Набір шрифтів Liberation також "
-"використовується у HTML-версії, якщо вони встановлені у вашій системі. У іншому випадку, використовуються альтернативні гарнітури. Примітка: шрифти Liberation входять до складу Red Hat Enterprise Linux 5 та старших версій."
+"використовується у HTML-версії, якщо вони встановлені у вашій системі. Примітка: шрифти Liberation входять до складу Red Hat Enterprise Linux 5 та старших версій."
 
 #. Tag: title
 #: Conventions.xml:16
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr "топографічні домовленості"
+msgstr "Топографічні домовленості"
 
 #. Tag: para
 #: Conventions.xml:18
@@ -60,7 +60,7 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
-"Для привертання уваги до певних слів та фраз використовуються чотири домовленості. Домовленості та обставини їх використання:"
+"Для виділення тексту використовуються чотири стилі, що вказуються далі."
 
 #. Tag: literal
 #: Conventions.xml:23
@@ -75,8 +75,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
 msgstr ""
-"Використовується для виділення інформації, що вводиться у систему, включаючи команди оболонки, назви файлів та шлях до файлів. "
-"Також цей шрифт використовується для виділення назв клавіш та комбінацій клавіш. Наприклад:"
+"Використовується для виділення інформації, що вводиться у систему, включаючи команди оболонки, назви файлів та шляхів до файлів. "
+"Також використовується для виділення назв клавіш та комбінацій клавіш. Наприклад:"
 
 #. Tag: para
 #: Conventions.xml:31
@@ -99,8 +99,8 @@ msgid ""
 "The above includes a file name, a shell command and a key cap, all presented "
 "in Mono-spaced Bold and all distinguishable thanks to context."
 msgstr ""
-"У наведеному вище прикладі вказано назву файлу, команду оболонки та назву клавіші, їх виділено за допомогою "
-"моноширинного жирного шрифту і завдяки цьому вони добре відрізняються від іншого тексту."
+"У наведеному вище прикладі вказано назву файлу, команду оболонки та назву клавіші, які виділено "
+"моноширинним жирним шрифтом."
 
 #. Tag: para
 #: Conventions.xml:39
@@ -109,7 +109,7 @@ msgid ""
 "Key-combinations can be distinguished from key caps by the hyphen connecting "
 "each part of a key-combination. For example:"
 msgstr ""
-"Комбінації клавіш можна відрізнити від назв клавіш за допомогою знаку тире, що ставиться між частинами комбінації клавіш. "
+"Для розділення окремих клавіш у складі комбінацій клавіш використовується знак тире. "
 "Наприклад:"
 
 #. Tag: para
@@ -138,8 +138,7 @@ msgid ""
 "The first sentence highlights the particular key cap to press. The second "
 "highlights two sets of three key caps, each set pressed simultaneously."
 msgstr ""
-"У першому реченні виділено окрему клавішу, яку слід натиснути. У другому, виділяється "
-"дві комбінації клавіш, клавіші у кожній з комбінації клавіш натискаються одночасно."
+"У першому прикладі виділено назву клавіші. У другому - комбінації клавіш, клавіші при цьому натискаються одночасно."
 
 #. Tag: para
 #: Conventions.xml:57
@@ -149,8 +148,8 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>Mono-spaced Bold</literal>. For example:"
 msgstr ""
-"Якщо текст програми, назви класів, методи, функції, назви змінних "
-"та значення, що повертаються подається у вигляді окремого абзацу, він також буде виділений <literal>моноширинним жирним шрифтом</literal>. Наприклад:"
+"Цим же шрифтом виділяються тексти програми, назви класів, методи, функції, назви змінних "
+"та значення, що повертаються. Наприклад:"
 
 #. Tag: para
 #: Conventions.xml:62
@@ -161,7 +160,7 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
-"Класи для роботи з файлами включають <classname>filesystem</classname> - клас для роботи з файловою системою, <classname>file</classname> - для роботи з файлами, та <classname>dir</"
+"Класи для роботи з файлами включають: <classname>filesystem</classname> - клас для роботи з файловою системою, <classname>file</classname> - для роботи з файлами, та <classname>dir</"
 "classname> - для роботи з каталогами. З кожним класом пов'язаний власний набір прав доступу."
 
 #. Tag: application
@@ -178,7 +177,7 @@ msgid ""
 "names; dialogue box text; labelled buttons; check-box and radio button "
 "labels; menu titles and sub-menu titles. For example:"
 msgstr ""
-"Таким чином позначаються слова та фрази, що зустрічаються у системі, включаючи назви програм; текст з діалогових вікон; назви кнопок; назви полів з відміткою та радіо-кнопок; пункти меню та субменю. Наприклад:"
+"Цим шрифтом позначаються слова та фрази, що зустрічаються у системі, включаючи назви програм; текст з діалогових вікон; назви кнопок; інші елементи графічного інтерфейсу; пункти меню. Наприклад:"
 
 #. Tag: para
 #: Conventions.xml:76
@@ -211,7 +210,7 @@ msgid ""
 "document and choose <guimenu>Edit > Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
-"Щоб вставити спеціальний символ у файл <application>gedit</application>, "
+"Щоб вставити спеціальний символ у файлі <application>gedit</application>, "
 "у головному меню виберіть <guimenu>Програми > Стандартні > Таблиця символів</guimenu>. Потім, виберіть <guimenu>Пошук > Знайти&hellip;</guimenu> "
 "у меню <application>Таблиця символів</application>, введіть назву символу "
 "у полі <guilabel>Пошук</guilabel> та натисніть "
@@ -243,7 +242,7 @@ msgid ""
 "<guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-"
 "menu in the <guimenu>System</guimenu> menu of the main menu bar' approach."
 msgstr ""
-"Зауважте, що для позначення переходів між пунктами меню та підменю використовується скорочення <guimenu>></guimenu>. Це зроблено для того, щоб уникнути складних описів, на зразок, 'Виберіть "
+"Зауважте, що для позначення переходів між пунктами меню та підменю використовується символ <guimenu>></guimenu>. Це зроблено для того, щоб уникнути складних описів, на зразок, 'Виберіть "
 "<guimenuitem>Миша</guimenuitem> з підменю <guimenu>Параметри</guimenu> у меню <guimenu>Система</guimenu> з меню головної панелі'."
 
 #. Tag: para
@@ -267,9 +266,8 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"При використанні моноширинного жирного курсиву або пропорційного жирного курсиву, "
-"курсив означає текст який треба замінити чи змінний текст. Курсив вказує, що "
-"текст не слід вводити дослівно або ж він не показується дослівно, навпаки текст змінюється залежно від обставин. "
+"Обидва стилі означають текст який треба замінити чи змінний текст. Курсив вказує, що "
+"текст не слід вводити дослівно, а змінити його залежно від параметрів. "
 "Наприклад:"
 
 #. Tag: para
@@ -283,8 +281,8 @@ msgid ""
 "john@example.com</command>."
 msgstr ""
 "Щоб з'єднатись з віддаленим комп'ютером через ssh, введіть у командному рядку <command>ssh "
-"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
-"command>. Якщо назва віддаленого комп'ютера <filename>example.com</"
+"<replaceable>ім'я_користувача</replaceable>@<replaceable>назва.домену</replaceable></"
+"command>. Наприклад, назва віддаленого комп'ютера <filename>example.com</"
 "filename> а назва облікового запису john, введіть <command>ssh "
 "john@example.com</command>."
 
@@ -297,7 +295,7 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
-"Команда <command>mount -o remount <replaceable>file-system</replaceable></"
+"Команда <command>mount -o remount <replaceable>файлова_система</replaceable></"
 "command> перепідключає файлову систему. Наприклад, для перепідключення файлової системи "
 "<filename>/home</filename>, слід вказати команду <command>mount -o "
 "remount /home</command>."
@@ -312,7 +310,7 @@ msgid ""
 "replaceable></command>."
 msgstr ""
 "Щоб побачити версію встановленого пакету, вкажіть команду <command>rpm -q "
-"<replaceable>package</replaceable></command>. Вона поверне результат у вигляді: <command><replaceable>пакет-версія-випуск</"
+"<replaceable>пакет</replaceable></command>. Вона поверне результат у вигляді: <command><replaceable>пакет-версія-випуск</"
 "replaceable></command>."
 
 #. Tag: para
@@ -323,8 +321,7 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
-"Зауважте, слова виводяться жирним курсивом &mdash; username, domain.name, file-"
-"system, пакет, версія та випуск. Кожне слово замінюється при вводі на фактичну команду, що вводиться або замінюється при виводі справжнім текстом, що показується."
+"У наведених прикладах жирним курсивом виділяються ім'я_користувача, назва.домену, файлова_система, пакет, версія та випуск. Кожне слово замінюється при вводі на фактичну команду, що вводиться або замінюється при виводі справжнім текстом, що показується."
 
 #. Tag: para
 #: Conventions.xml:119
@@ -333,8 +330,7 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"Окрім стандартного використання для представлення назв роботи, курсивом позначається "
-"перше використання нового та важливого терміну. Наприклад:"
+"Також курсивом позначається перше використання нового та важливого терміну. Наприклад:"
 
 #. Tag: para
 #: Conventions.xml:124
@@ -349,7 +345,7 @@ msgid ""
 "module from the MPM group can be loaded by the Apache HTTP Server."
 msgstr ""
 "Коли сервер Apache HTTP приймає запити, він розподіляє їх серед дочірніх процесів "
-"та потоків виконання. Така група процесів чи потоків виконання відома як"
+"та потоків виконання. Така група процесів чи потоків виконання відома як "
 "<firstterm>пул сервера</firstterm>. У сервері Apache HTTP версії 2.0, "
 "відповідальність за створення та підтримку цих серверних пулів покладено на групу модулів "
 "із назвою <firstterm>Multi-Processing Modules</"
@@ -369,7 +365,7 @@ msgid ""
 "Two, commonly multi-line, data types are set off visually from the "
 "surrounding text."
 msgstr ""
-"Дворядкові а часто кілька рядкові типи даних візуально виділяються від навколишнього тексту."
+"Дані  різних типів, що містять декілька рядків, відділяються від навколишнього тексту."
 
 #. Tag: para
 #: Conventions.xml:138
@@ -378,8 +374,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"Для виводу, що надсилається на термінал, також застосовується <computeroutput>Моноширинний прямий шрифт</"
-"computeroutput> та виглядає наступним чином:"
+"Текст, що виводиться на термінал, також виділяється <computeroutput>Моноширинним шрифтом</"
+"computeroutput>:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -398,8 +394,8 @@ msgid ""
 "Source-code listings are also set in <computeroutput>Mono-spaced Roman</"
 "computeroutput> but are presented and highlighted as follows:"
 msgstr ""
-"Для текстів програм також застосовується <computeroutput>моноширинний прямий шрифт</"
-"computeroutput>, але виділення відбувається таким чином:"
+"Для текстів програм також застосовується <computeroutput>моноширинний шрифт</"
+"computeroutput>:"
 
 #. Tag: programlisting
 #: Conventions.xml:148
@@ -460,7 +456,7 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
-"Зрештою, ми використовуємо три візуальні стилі для привертання уваги до інформації, що може бути важливою з певних причин."
+"Зрештою, для привертання уваги до важливої інформації використовуються три візуальні стилі."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -476,8 +472,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"Примітка є підказкою або скороченням або альтернативним підходом до виконання завдання. "
-"Ігнорування примітки не матиме негативних наслідків, але ви можете пропустити прийом, який спростить ваше життя."
+"Примітка зазвичай містить додаткову інформацію. "
+"Ігнорування примітки не матиме негативних наслідків, але ви можете пропустити пораду, яка спростить вашу роботу."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -494,10 +490,9 @@ msgid ""
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
 msgstr ""
-"Поля Важливо привертають увагу до речей, які можна пропустити: зміни у конфігурації, "
+"На інформацію, що позначена важливою, слід звернути увагу. Вона може включати зміни у конфігурації, "
 "що стосуються лише поточної версії, або служби, які слід перезапустити перш "
-"ніж буде застосовано оновлення. Ігнорування полів Важливо не призводить до втрати даних, але "
-"може спричинити роздратування та розпач."
+"ніж буде застосовано оновлення. Ознайомлення з важливою інформацією може значно спростити вашу роботу."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -512,6 +507,6 @@ msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"Попередження не слід ігнорувати. Ігнорування попереджень може призвести до втрати даних."
+"Попередження не слід ігнорувати. Попередження містять важливу інформацію, що може запобігти втраті даних."
 
 
