--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Tue Oct 6 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
+- Update Fedora Feedback into Ukrainian
+
 - Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
 - Translate Fedora Feedback into Ukrainian
 
