Update of Common Content in Polish from Piotr Drąg <piotrdrag@gmail.com>
git-svn-id: file:///srv/svn/publican/trunk@808 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,5 +1,8 @@
+- Wed Oct 7 2009 Piotr Drąg <piotrdrag@gmail.com>
+- Update Fedora Feedback in Ukrainian
+
 - Tue Oct 6 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
-- Update Fedora Feedback into Ukrainian
+- Update Fedora Feedback in Ukrainian
 
 - Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
 - Translate Fedora Feedback into Ukrainian
