--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,5 +1,8 @@
+- Wed Oct 7 2009 Piotr Drąg <piotrdrag@gmail.com>
+- Update of Document Conventions in Polish
+
 - Tue Oct 6 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
-- Update of Document Conventions to Ukrainian
+- Update of Document Conventions in Ukrainian
 
 - Sat Oct 3 2009 Maxim V. Dziumanenko <dziumanenko@gmail.com>
 - Translation of Document Conventions to Ukrainian
