--- a/publican-fedora/pl-PL/Feedback.po
+++ b/publican-fedora/pl-PL/Feedback.po
@@ -6,11 +6,11 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-02-24 03:17+0000\n"
-"PO-Revision-Date: 2009-03-05 14:56+0100\n"
+"PO-Revision-Date: 2009-10-03 21:15+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: application/x-xml2pot; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
@@ -41,10 +41,11 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"Jeśli znajdziesz błąd typograficzny w tym podręczniku lub masz pomysł jak go "
-"ulepszyć, skontaktuj się z nami. Prosimy wysłać raport w Bugzilli: <ulink "
-"url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/"
-"bugzilla/</ulink> w produkcie <application>&PRODUCT;</application>."
+"Jeśli użytkownik odnalazł błąd typograficzny w tym podręczniku lub ma "
+"pomysł, jak go ulepszyć, powinien się z nami skontaktować. Prosimy wysłać "
+"raport w Bugzilli: <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
+"\">http://bugzilla.redhat.com/bugzilla/</ulink> w produkcie "
+"<application>&PRODUCT;</application>."
 
 #. Tag: para
 #: Feedback.xml:16
@@ -53,7 +54,7 @@ msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"Wysyłając raport błędu, upewnij się, że wspomniałeś identyfikator "
+"Wysyłając raport błędu proszę upewnić się, że wspomniano identyfikator "
 "podręcznika: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
@@ -65,6 +66,7 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"Jeśli masz sugestie, jak ulepszyć dokumentację, postaraj się być jak "
-"najbardziej szczegółowy opisując swój pomysł. Jeśli znalazłeś błąd, dołącz "
-"numer sekcji i pobliską cześć tekstu, abyśmy mogli łatwo go znaleźć."
+"Jeśli użytkownik ma sugestie, jak ulepszyć dokumentację, prosimy aby "
+"postarał się być jak najbardziej szczegółowy opisując swój pomysł. Jeśli "
+"odnaleziono błąd, prosimy dołączyć numer sekcji i pobliską cześć tekstu, aby "
+"można było go łatwo odnaleźć."
