--- a/publican/datadir/Common_Content/common/pl-PL/Conventions.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Conventions.po
@@ -6,11 +6,11 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2009-03-08 13:09+0100\n"
+"PO-Revision-Date: 2009-10-03 22:48+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: application/x-xml2pot; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
@@ -41,8 +41,8 @@ msgstr ""
 "url=\"https://fedorahosted.org/liberation-fonts/\">Liberation</ulink>. "
 "Czcionki Liberation są używane także w wydaniach HTML, jeśli zestaw jest "
 "zainstalowany w systemie. Jeśli nie, wyświetlone zostaną alternatywne, ale "
-"odpowiadające im czcionki. Uwaga: Red Hat Enterprise Linux 5 i późniejsze "
-"domyślnie zawierają zestaw czcionek Liberation."
+"odpowiadające im czcionki. Uwaga: system Red Hat Enterprise Linux 5 i "
+"późniejsze domyślnie zawierają zestaw czcionek Liberation."
 
 #. Tag: title
 #, no-c-format
@@ -60,12 +60,12 @@ msgstr ""
 "konwencje typograficzne."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Pogrubiona czcionka o stałej szerokości"
+msgstr "<literal>Pogrubiona czcionka o stałej szerokości</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
@@ -82,12 +82,12 @@ msgid ""
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
 "Aby zobaczyć zawartość pliku <filename>mój_nowy_bestseller</filename> w "
-"bieżącym folderze roboczym, wpisz polecenie <command>cat "
-"mój_nowy_bestseller</command> po znaku zachęty powłoki i naciśnij "
+"bieżącym katalogu roboczym, należy wpisać polecenie <command>cat "
+"mój_nowy_bestseller</command> po znaku zachęty powłoki i nacisnąć klawisz "
 "<keycap>Enter</keycap>, aby wykonać polecenie."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -97,7 +97,7 @@ msgstr ""
 "rozróżnialne dzięki kontekstowi."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -108,7 +108,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr "Naciśnij <keycap>Enter</keycap>, aby wykonać polecenie."
+msgstr "Proszę nacisnąć klawisz <keycap>Enter</keycap>, aby wykonać polecenie."
 
 #. Tag: para
 #, no-c-format
@@ -118,23 +118,24 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Naciśnij <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
-"keycap></keycombo>, aby przełączyć na pierwszy terminal wirtualny. Naciśnij "
+"Naciśnięcie <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"keycap></keycombo> przełączy na pierwszy terminal wirtualny. Naciśnięcie "
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
-"keycombo>, aby wrócić do sesji X Window."
+"keycombo> powróci do sesji X Window."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"W pierwszym zdaniu wyróżniono pojedynczy klawisz do naciśnięcia. W drugim "
-"wyróżniono dwa zestawy trzech klawiszy, każde do wciśnięcia jednocześnie."
+"W pierwszym paragrafie wyróżniono pojedynczy klawisz do naciśnięcia. W "
+"drugim wyróżniono dwa zestawy trzech klawiszy, każde do wciśnięcia "
+"jednocześnie."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -155,26 +156,26 @@ msgid ""
 msgstr ""
 "Klasy związane z plikami to <classname>filesystem</classname> dla systemów "
 "plików, <classname>file</classname> dla plików, a <classname>dir</classname> "
-"dla folderów. Każda klasa posiada swój własny zestaw uprawnień."
+"dla katalogów. Każda klasa posiada swój własny zestaw uprawnień."
 
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Pogrubiona czcionka o zmiennej szerokości</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"Ta czcionka zaznacza słowa lub frazy spotykane w systemie, w tym nazwy "
-"aplikacji, tekst okien dialogowych, przyciski z etykietami, etykiety pól "
+"Ta czcionka oznacza słowa lub frazy spotykane w systemie, w tym nazwy "
+"aplikacji, teksty okien dialogowych, przyciski z etykietami, etykiety pól "
 "wyboru, tytuły w menu i podmenu. Na przykład:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <guimenu>System &#62; Preferences &#62; Mouse</guimenu> from the main "
 "menu bar to launch <application>Mouse Preferences</application>. In the "
@@ -183,15 +184,15 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Wybierz <guimenu>System &gt; Preferencje &gt; Mysz</guimenu> z głównego meny "
-"panelu, aby uruchomić <application>Preferencje myszy</application>. W karcie "
-"<guilabel>Przyciski</guilabel> naciśnij na pole wyboru <guilabel>Mysz "
-"leworęczna</guilabel> i naciśnij <guibutton>Zamknij</guibutton>, aby "
-"przełączyć główny przycisk myszy z lewego na prawy (umożliwiając używanie "
-"myszy lewą ręką)."
+"Proszę wybrać <guimenu>System &#62; Preferencje &#62; Mysz</guimenu> z "
+"głównego meny panelu, aby uruchomić <application>Preferencje myszy</"
+"application>. W karcie <guilabel>Przyciski</guilabel> należy nacisnąć pole "
+"wyboru <guilabel>Dla leworęcznych</guilabel> i nacisnąć przycisk "
+"<guibutton>Zamknij</guibutton>, aby przełączyć główny przycisk myszy z "
+"lewego na prawy (umożliwiając używanie myszy lewą ręką)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <guimenu>Applications &#62; Accessories &#62; Character Map</guimenu> "
@@ -205,20 +206,21 @@ msgid ""
 "document and choose <guimenu>Edit &#62; Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
-"Aby umieścić specjalny znak w pliku <application>gedit</application>, "
-"wybierz <guimenu>Aplikacje &gt; Akcesoria &gt; Mapa znaków</guimenu> z "
-"głównego menu panelu. Następnie wybierz <guimenu>Znajdź &gt; Znajdź&hellip;</"
-"guimenu> z paska menu <application>Mapy znaków</application>, podaj nazwę "
-"znaku w polu <guilabel>Znajdź</guilabel> i naciśnij <guibutton>Dalej</"
+"Aby umieścić specjalny znak w pliku programu <application>gedit</"
+"application>, należy wybrać <guimenu>Aplikacje &#62; Akcesoria &#62; Mapa "
+"znaków</guimenu> z głównego menu panelu. Następnie należy wybrać "
+"<guimenu>Znajdź &#62; Znajdź&hellip;</guimenu> z paska menu "
+"<application>Mapy znaków</application>, podać nazwę znaku w polu "
+"<guilabel>Znajdź</guilabel> i nacisnąć przycisk <guibutton>Dalej</"
 "guibutton>. Wyszukiwany znak zostanie wyróżniony w <guilabel>Tablicy znaków</"
 "guilabel>. Podwójne naciśnięcie wyróżnionego znaku umieści go w polu "
-"<guilabel>Tekst do skopiowania</guilabel>. Następnie naciśnij przycisk "
-"<guibutton>Skopiuj</guibutton>. Teraz przełącz z powrotem na dokument i "
-"wybierz <guimenu>Edycja &gt; Wklej</guimenu> z paska menu "
-"<application>gedit</application>."
+"<guilabel>Tekst do skopiowania</guilabel>. Następnie należy nacisnąć "
+"przycisk <guibutton>Skopiuj</guibutton>. Teraz należy przełączyć się z "
+"powrotem na dokument i wybrać <guimenu>Edycja &#62; Wklej</guimenu> z paska "
+"menu programu <application>gedit</application>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -226,12 +228,12 @@ msgid ""
 "context."
 msgstr ""
 "Powyższy tekst zawiera nazwy aplikacji, nazwy menu systemowych i ich "
-"elementów, nazwy menu aplikacji oraz przyciski i tekst z interfejsu GUI, "
-"wszystkie przedstawione za pomocą pogrubionej czcionki o zmiennej "
-"szerokości, a rozróżnialne dzięki kontekstowi."
+"elementów, nazwy menu aplikacji oraz przyciski i tekst z graficznego "
+"interfejsu użytkownika, wszystkie przedstawione za pomocą pogrubionej "
+"czcionki o zmiennej szerokości, a rozróżnialne dzięki kontekstowi."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
 "through a menu and its sub-menus. This avoids difficult-to-follow phrasing "
@@ -239,10 +241,11 @@ msgid ""
 "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
 "menu of the main menu bar&#39;."
 msgstr ""
-"Zauważ znak <guimenu>&gt;</guimenu>, używany do wskazania przejścia między "
-"menu a podmenu. Dzięki temu można uniknąć trudnej do zrozumienia formy &#39;"
-"Wybierz <guimenuitem>Mysz</guimenuitem> z podmenu <guimenu>Preferencje</"
-"guimenu> w menu <guimenu>System</guimenu> głównego menu panelu&#39;."
+"Proszę zauważyć znak <guimenu>&#62;</guimenu>, używany do wskazania "
+"przejścia między menu a podmenu. Dzięki temu można uniknąć trudnej do "
+"zrozumienia formy &#39;Proszę wybrać <guimenuitem>Mysz</guimenuitem> z "
+"podmenu <guimenu>Preferencje</guimenu> w menu <guimenu>System</guimenu> "
+"głównego menu panelu&#39;."
 
 #. Tag: para
 #, no-c-format
@@ -256,7 +259,7 @@ msgstr ""
 "czcionka o zmiennej szerokości</replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -265,8 +268,8 @@ msgid ""
 msgstr ""
 "Kiedy używana jest pogrubiona czcionka i stałej lub zmiennej szerokości, "
 "dodanie pochylenia wskazuje tekst do zastąpienia lub zmienne. Pochylenie "
-"zaznacza tekst, którego nie trzeba wpisywać dosłownie lub który zmienia się "
-"w zależności od okoliczności. Na przykład:"
+"oznacza tekst, którego nie trzeba wpisywać dosłownie lub który zmienia się w "
+"zależności od okoliczności. Na przykład:"
 
 #. Tag: para
 #, no-c-format
@@ -277,11 +280,11 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
-"Aby połączyć się ze zdalnym komputerem używając SSH, podaj <command>ssh "
-"<replaceable>nazwaużytkownika</replaceable>@<replaceable>nazwa.domeny</"
-"replaceable></command> po znaku zachęty powłoki. Jeśli zdalny komputer to "
-"<filename>przykład.pl</filename>, a nazwa użytkownika na tym komputerze to "
-"jan, podaj <command>ssh jan@przykład.pl</command>."
+"Aby połączyć się ze zdalnym komputerem używając SSH, należy podać polecenie "
+"<command>ssh <replaceable>nazwa_użytkownika</replaceable>@<replaceable>nazwa."
+"domeny</replaceable></command> po znaku zachęty powłoki. Jeśli zdalny "
+"komputer to <filename>przykład.pl</filename>, a nazwa użytkownika na tym "
+"komputerze to jan, należy podać <command>ssh jan@przykład.pl</command>."
 
 #. Tag: para
 #, no-c-format
@@ -304,7 +307,7 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
-"Aby zobaczyć wersję obecnie zainstalowanego pakietu, użyj polecenia "
+"Aby zobaczyć wersję obecnie zainstalowanego pakietu, należy użyć polecenia "
 "<command>rpm -q <replaceable>pakiet</replaceable></command>. Zwrócony "
 "zostanie następujący wynik: <command><replaceable>pakiet-wersja-wydanie</"
 "replaceable></command>."
@@ -316,10 +319,10 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
-"Zauważ powyżej pogrubione i pochylone słowa &mdash; nazwaużytkownika, nazwa."
-"domeny, system-plików, pakiet, wersja i wydanie. Każde słowo zostanie "
-"zastąpione przez tekst podany przez użytkownika podczas wpisywania polecenia "
-"lub przez tekst wyświetlany przez system."
+"Proszę zauważyć powyżej pogrubione i pochylone słowa &mdash; "
+"nazwa_użytkownika, nazwa.domeny, system-plików, pakiet, wersja i wydanie. "
+"Każde słowo zostanie zastąpione przez tekst podany przez użytkownika podczas "
+"wpisywania polecenia lub przez tekst wyświetlany przez system."
 
 #. Tag: para
 #, no-c-format
@@ -327,7 +330,7 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"Poza standardowym użyciem do przestawienia tytułu pracy, pochylenie zaznacza "
+"Poza standardowym użyciem do przestawienia tytułu pracy, pochylenie oznacza "
 "pierwsze użycie nowego i ważnego terminu. Na przykład:"
 
 #. Tag: para
@@ -346,7 +349,7 @@ msgstr ""
 "jako <firstterm>pula-serwera</firstterm>. W serwerze HTTP Apache 2.0, "
 "odpowiedzialność za tworzenie i zarządzanie tymi pulami-serwera została "
 "umieszczona w grupie modułów o nazwie <firstterm>Moduły wielokrotnego "
-"przetwarzania</firstterm> (<firstterm>MPMs</firstterm>). Inaczej niż inne "
+"przetwarzania</firstterm> (<firstterm>MPM</firstterm>). Inaczej niż inne "
 "moduły, tylko jeden moduł z grupy MPM może być wczytywany przez serwer HTTP "
 "Apache."
 
@@ -356,16 +359,16 @@ msgid "Pull-quote Conventions"
 msgstr "Konwencje dla cytatów"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"Dwa, zazwyczaj wielowierszowe typy danych są wizualnie oddzielone od "
-"otaczającego tekstu."
+"Wyjście terminala i kod źródłowy są wizualnie oddzielone od otaczającego "
+"tekstu."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
@@ -375,7 +378,7 @@ msgstr ""
 "przez to przedstawia się tak:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
@@ -404,7 +407,7 @@ msgid "Note"
 msgstr "Uwaga"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -420,7 +423,7 @@ msgid "Important"
 msgstr "Ważne"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -431,7 +434,7 @@ msgstr ""
 "zmiany konfiguracji mające zastosowanie tylko w bieżącej sesji lub usługa "
 "wymagająca ponownego uruchomienia przed uwzględnieniem aktualizacji. "
 "Zignorowanie pól ważne nie spowoduje utraty danych, ale może wywołać "
-"irytację bądź frustrację."
+"irytację lub frustrację."
 
 #. Tag: title
 #, no-c-format
@@ -439,66 +442,10 @@ msgid "Warning"
 msgstr "Ostrzeżenie"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
 "Ostrzeżenia nie powinny być ignorowane. Zignorowanie ostrzeżeń "
 "najprawdopodobniej spowoduje utratę danych."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Pogrubiona czcionka o zmiennej szerokości"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "książki       Pulpit    dokumentacja   szkice  mss      zdjęcia  inne  "
-#~ "svn\n"
-#~ "książki_test  Pulpit1   pobrane        obrazy  notatki  skrypty  svg"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Utworzono Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo(&#39;Witaj&#39;) = \" + echo.echo"
-#~ "(\"Witaj\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
