--- a/publican/datadir/Common_Content/common/pl-PL/Feedback.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Feedback.po
@@ -6,11 +6,11 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2009-03-05 15:05+0100\n"
+"PO-Revision-Date: 2009-10-03 21:16+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: application/x-xml2pot; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
@@ -32,5 +32,5 @@ msgstr "informacje kontaktowe dla tego podręcznika"
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr ""
-"Powinieneś zastąpić ten plik przez utworzenie własnego lokalnego pliku "
+"Powinno się zastąpić ten plik przez utworzenie własnego lokalnego pliku "
 "Feedback.xml."
