Translation of common content to Bulgarian -- Martin Stefanov <f0x1@mail.bg>
git-svn-id: file:///srv/svn/publican/trunk@819 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Wed Oct 14 2009 Martin Stefanov <f0x1@mail.bg>
+- Translate Fedora Feedback into Bulgarian
+
 - Wed Oct 7 2009 Piotr Drąg <piotrdrag@gmail.com>
 - Update Fedora Feedback in Ukrainian
 
