--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Wed Oct 14 2009 Martin Stefanov <f0x1@mail.bg>
+- Translation of Document Conventions to Bulgarian
+
 - Wed Oct 7 2009 Piotr Drąg <piotrdrag@gmail.com>
 - Update of Document Conventions in Polish
 
