prepare sources for delivery of 1.0
git-svn-id: file:///srv/svn/publican/trunk@827 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -62,4 +62,7 @@ Windows
     pp @pp-opts ..\bin\publican -vv 1>2> pp.log
     compile publican.nsi in NSIS
 
+TODO
+wget http://www.iana.org/assignments/language-subtag-registry
 
+$ grep -A 1 -B 0 -P '^Type: (language|redundant)' language-subtag-registry | grep -P '^(Subtag|Tag)' | perl -p -e 's/^(Subtag|Tag):\s*//gi' | wc -l
