--- a/publican/po/publican.pot
+++ b/publican/po/publican.pot
@@ -447,7 +447,7 @@ msgstr ""
 
 #. ($key,$value,$constraint)
 #: lib/Publican.pm:464
-msgid "Invalid format for %1. Value %2 does not conform to constraint %3"
+msgid "Invalid format for %1. Value (%2) does not conform to constraint (%3)"
 msgstr ""
 
 #. ($lang)
