Add de-CH, plus corrections to de-DE
git-svn-id: file:///srv/svn/publican/trunk@828 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Sun Oct 25 2009 Fabian Affolter <fab@fedoraproject.org>
+- Verify de-DE version of Fedora Feedback for de-CH
+
 - Wed Oct 14 2009 Martin Stefanov <f0x1@mail.bg>
 - Translate Fedora Feedback into Bulgarian
 
