--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,7 @@
+- Sun Oct 25 2009 Fabian Affolter <fab@fedoraproject.org>
+- Adaptation of Document Conventions from de-DE for de-CH
+- Correct typos in de-DE
+
 - Wed Oct 14 2009 Martin Stefanov <f0x1@mail.bg>
 - Translation of Document Conventions to Bulgarian
 
