Add translations into Asturian
git-svn-id: file:///srv/svn/publican/trunk@840 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Sat Oct 31 2009 Iñigo Varela <astur@softastur.org>
+- Translate Fedora Feedback into Asturian
+
 - Sun Oct 25 2009 Fabian Affolter <fab@fedoraproject.org>
 - Verify de-DE version of Fedora Feedback for de-CH
 
