--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Sat Oct 31 2009 Iñigo Varela <astur@softastur.org>
+- Translation of Document Conventions to Asturian
+
 - Sun Oct 25 2009 Fabian Affolter <fab@fedoraproject.org>
 - Adaptation of Document Conventions from de-DE for de-CH
 - Correct typos in de-DE
