--- a/publican/po/publican.pot
+++ b/publican/po/publican.pot
@@ -230,7 +230,7 @@ msgid "Can't write to overrides.cfg: %1"
 msgstr ""
 
 #: bin/publican:100
-msgid "Comma-separated list of formats, for example: html,pdf,htm-single,html-desktop,text"
+msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,text"
 msgstr ""
 
 #: bin/publican:103
